web-infras/parser/tests/fixtures/esprima/es2020/nullish-coalescing/invalid-nullish-coalescing-chain-or-tail/output.txt
[SyntaxError]: Nullish coalescing operator(??) requires parens when mixing with logical operators (1,2)
1|1 ?? 2 || 3
 |^
